# SZE-MOSZE-2020-Nehez-eldonteni

./: .gitignore  Adventurer.cpp  Adventurer.h  Blood_Raven.json  Character.cpp  Character.h  CharacterSVGRenderer.cpp  CharacterSVGRenderer.h  Dark_Wanderer.json  Fallen.json  FileNotFoundException.h  Game.cpp  Game.h  Hero.cpp  Hero.h  HeroTextRenderer.cpp  HeroTextRenderer.h  JSON.cpp  JSON.h  JSONParser.cpp  JSONParser.h  Main.cpp  Makefile  Map.cpp  Map.h  MarkedMap.cpp  MarkedMap.h  Monster.cpp  Monster.h  ObserverSVGRenderer.cpp  ObserverSVGRenderer.h  ObserverTextRenderer.cpp  ObserverTextRenderer.h  PreparedGame.cpp  PreparedGame.h  README.md  Renderer.h  Report.md  SVGRenderer.h  TextRenderer.h  (+177 more)
.github/workflows/: codeTest.yml  output_test.yml  parseTest.yml  pushdocs.yml
Docker/: Dockerfile
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  enums_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  (+27 more)
testing/: CMakeLists.txt  diff_script.sh  input1.txt  input2.txt  manual_calculation.txt  parserTest.cpp  parsetest.sh
testing/units/: advHalis.json  badkowa.json  codos.json  halis.json  kowa.json
units/: codos.json  halis.json  kowa.json
